--- a/user/tv.html
+++ b/user/tv.html
@@ -174,7 +174,7 @@
 
     <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
     <script>
-        const M3U_URL = 'https://flixy-rd.pages.dev/admin/channel.m3u';
+        const M3U_URL = 'https://wefetchproxy.jhonielproyectos.workers.dev/?url=https://flixy-rd.pages.dev/admin/channel.m3u';
         const player = videojs('tv-player', {
     fluid: true,
     html5: {
@@ -295,3 +295,4 @@
     </script>
 </body>
 </html>
+
