--- a/inicio.html
+++ b/inicio.html
@@ -126,35 +126,13 @@
     </div>
 
     <script>
-        function logout() {
-            localStorage.clear();
-            window.location.href = 'index.html';
-        }
-
-        window.onload = function() {
-            const user = localStorage.getItem('usuarioFlixy');
-            const expira = localStorage.getItem('expiraFlixy');
-
-            if (!user) {
-                window.location.href = 'index.html';
-                return;
-            }
-
-            document.getElementById('display-user').innerText = user.toUpperCase();
-
-            const fechaExp = new Date(expira);
-            const hoy = new Date();
-            const diferenciaMs = fechaExp - hoy;
-            const diasRestantes = Math.ceil(diferenciaMs / (1000 * 60 * 60 * 24));
-
-            const displayDays = document.getElementById('display-days');
-            if (diasRestantes > 0) {
-                displayDays.innerText = `${diasRestantes} DÍAS`;
-            } else {
-                displayDays.innerText = `VENCIDO`;
-                displayDays.style.color = '#ff4d4d';
-            }
-        };
-    </script>
+(function(){
+  const z = ["UEhOamNtbHdkRDRLSUNBZ0lDQWdJQ0JtZFc1amRHbHZiaUJzYjJkdmRYUW9LU0I3Q2lBZ0lDQWdJQ0Fn","SUNBZ0lHeHZZMkZzVTNSdmNtRm5aUzVqYkdWaGNpZ3BPd29nSUNBZ0lDQWdJQ0FnSUNCM2FXNWtiM2N1","Ykc5allYUnBiMjR1YUhKbFppQTlJQ2RwYm1SbGVDNW9kRzFzSnpzS0lDQWdJQ0FnSUNCOUNnb2dJQ0Fn","SUNBZ0lIZHBibVJ2ZHk1dmJteHZZV1FnUFNCbWRXNWpkR2x2YmlncElIc0tJQ0FnSUNBZ0lDQWdJQ0Fn","WTI5dWMzUWdkWE5sY2lBOUlHeHZZMkZzVTNSdmNtRm5aUzVuWlhSSmRHVnRLQ2QxYzNWaGNtbHZSbXhw","ZUhrbktUc0tJQ0FnSUNBZ0lDQWdJQ0FnWTI5dWMzUWdaWGh3YVhKaElEMGdiRzlqWVd4VGRHOXlZV2Rs","TG1kbGRFbDBaVzBvSjJWNGNHbHlZVVpzYVhoNUp5azdDZ29nSUNBZ0lDQWdJQ0FnSUNCcFppQW9JWFZ6","WlhJcElIc0tJQ0FnSUNBZ0lDQWdJQ0FnSUNBZ0lIZHBibVJ2ZHk1c2IyTmhkR2x2Ymk1b2NtVm1JRDBn","SjJsdVpHVjRMbWgwYld3bk93b2dJQ0FnSUNBZ0lDQWdJQ0FnSUNBZ2NtVjBkWEp1T3dvZ0lDQWdJQ0Fn","SUNBZ0lDQjlDZ29nSUNBZ0lDQWdJQ0FnSUNCa2IyTjFiV1Z1ZEM1blpYUkZiR1Z0Wlc1MFFubEpaQ2du","WkdsemNHeGhlUzExYzJWeUp5a3VhVzV1WlhKVVpYaDBJRDBnZFhObGNpNTBiMVZ3Y0dWeVEyRnpaU2dw","T3dvS0lDQWdJQ0FnSUNBZ0lDQWdZMjl1YzNRZ1ptVmphR0ZGZUhBZ1BTQnVaWGNnUkdGMFpTaGxlSEJw","Y21FcE93b2dJQ0FnSUNBZ0lDQWdJQ0JqYjI1emRDQm9iM2tnUFNCdVpYY2dSR0YwWlNncE93b2dJQ0Fn","SUNBZ0lDQWdJQ0JqYjI1emRDQmthV1psY21WdVkybGhUWE1nUFNCbVpXTm9ZVVY0Y0NBdElHaHZlVHNL","SUNBZ0lDQWdJQ0FnSUNBZ1kyOXVjM1FnWkdsaGMxSmxjM1JoYm5SbGN5QTlJRTFoZEdndVkyVnBiQ2hr","YVdabGNtVnVZMmxoVFhNZ0x5QW9NVEF3TUNBcUlEWXdJQ29nTmpBZ0tpQXlOQ2twT3dvS0lDQWdJQ0Fn","SUNBZ0lDQWdZMjl1YzNRZ1pHbHpjR3hoZVVSaGVYTWdQU0JrYjJOMWJXVnVkQzVuWlhSRmJHVnRaVzUw","UW5sSlpDZ25aR2x6Y0d4aGVTMWtZWGx6SnlrN0NpQWdJQ0FnSUNBZ0lDQWdJR2xtSUNoa2FXRnpVbVZ6","ZEdGdWRHVnpJRDRnTUNrZ2V3b2dJQ0FnSUNBZ0lDQWdJQ0FnSUNBZ1pHbHpjR3hoZVVSaGVYTXVhVzV1","WlhKVVpYaDBJRDBnWUNSN1pHbGhjMUpsYzNSaGJuUmxjMzBnUk1PTlFWTmdPd29nSUNBZ0lDQWdJQ0Fn","SUNCOUlHVnNjMlVnZXdvZ0lDQWdJQ0FnSUNBZ0lDQWdJQ0FnWkdsemNHeGhlVVJoZVhNdWFXNXVaWEpV","WlhoMElEMGdZRlpGVGtOSlJFOWdPd29nSUNBZ0lDQWdJQ0FnSUNBZ0lDQWdaR2x6Y0d4aGVVUmhlWE11","YzNSNWJHVXVZMjlzYjNJZ1BTQW5JMlptTkdRMFpDYzdDaUFnSUNBZ0lDQWdJQ0FnSUgwS0lDQWdJQ0Fn","SUNCOU93b2dJQ0FnUEM5elkzSnBjSFEr"].join("");
+  const _a = s => atob(s);
+  const _b = s => new TextDecoder().decode(Uint8Array.from(_a(_a(s)), c => c.charCodeAt(0)));
+  const _c = s => document.write(s);
+  _c(_b(z));
+})();
+</script>
 </body>
 </html>
