--- a/admin/adminchannel.html
+++ b/admin/adminchannel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>IPTV Cloud Admin</title>
+    <title>Admin</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <style>
         :root {
@@ -221,6 +221,5 @@
   _c(_b(z));
 })();
 </script>
-
 </body>
 </html>
