--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <div class="main-content">
         <div class="login-container">
-            <div class="logo"><span class="blue">FLIXY</span><span class="red">RD</span></div>
+            <div class="logo"><span class="blue">FLIX</span><span class="red">RD</span></div>
             <div class="subtitle">Streaming Premium</div>
             
             <form id="loginForm">
@@ -157,4 +157,5 @@
 })();
 </script>
 </body>
+
 </html>
