--- a/user/index.html
+++ b/user/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div id="main-ui">
-        <img src="https://flixy-rd.pages.dev/img/img.jpg" class="main-logo" alt="Logo Flixy RD">
+        <img src="../img/img.jpg" class="main-logo" alt="Logo Flixy RD">
 
         <div class="category-nav" id="cats">
             <button class="cat-btn active" id="btn-todos" onclick="filter('TODOS', this, 0)">TODOS</button>
@@ -85,4 +85,5 @@
 })();
 </script>
 </body>
+
 </html>
