--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -211,7 +211,7 @@
         </div>
         
         <div class="logo-container">
-            <img src="https://flixy-rd.pages.dev/img/img.jpg" alt="Logo Flixy">
+            <img src="../img/img.png" alt="Logo Flixy">
         </div>
 
         <p class="menu-label">Administración</p>
@@ -243,3 +243,4 @@
 </body>
 
 </html>
+
