--- a/admin/adminuser.html
+++ b/admin/adminuser.html
@@ -99,9 +99,9 @@
             <option value="15 DIAS">15 DIAS</option>
             <option value="30 DIAS">30 DIAS</option>
             <option value="60 DIAS">60 DIAS</option>
-            <option value="3 MECES">3 MECES</option>
-            <option value="6 MECES">6 MECES</option>
-            <option value="12 MECES">12 MECES</option>
+            <option value="3 MECES">3 MESES</option>
+            <option value="6 MECES">6 MESES</option>
+            <option value="12 MECES">12 MESES</option>
         </select>
     </div>
     
@@ -129,3 +129,4 @@
 </script>
 </body>
 </html>
+
