--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -200,7 +200,7 @@
         <button class="mobile-toggle" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i>
         </button>
-        <img src=".../img/img.png" class="mobile-logo" alt="Flixy">
+        <img src="../img/img.png" class="mobile-logo" alt="Flixy">
     </header>
 
     <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
@@ -243,4 +243,5 @@
 </body>
 
 </html>
+
 
