--- a/admin/adminchannel.html
+++ b/admin/adminchannel.html
@@ -117,7 +117,67 @@
     <div class="form-group"><label>Nombre del Canal</label><input type="text" id="mName"></div>
     <div class="form-group"><label>Grupo</label>
         <select id="mGroup">
-            <option value="PREMIUM">💎 PREMIUM</option><option value="DEPORTES">⚽ DEPORTES</option><option value="CINE">🎬 CINE</option><option value="SERIES">🍿 SERIES</option><option value="KIDS">👶 KIDS</option><option value="NOTICIAS">🗞️ NOTICIAS</option><option value="ADULTOS">🔞 ADULTOS (18+)</option>
+           <option value="PREMIUM">💎 PREMIUM (HBO, STAR, FOX)</option>
+<option value="DEPORTES">⚽ DEPORTES (GENERAL)</option>
+<option value="DEPORTES VIP">🏆 DEPORTES VIP / PPV</option>
+<option value="CINE">🎬 CINE / PELÍCULAS</option>
+<option value="SERIES">🍿 SERIES</option>
+<option value="KIDS">👶 KIDS / INFANTIL</option>
+<option value="DOCUMENTALES">🌎 DOCUMENTALES</option>
+<option value="NOTICIAS">🗞️ NOTICIAS</option>
+<option value="MUSICA">🎵 MÚSICA</option>
+<option value="NOVELAS">💃 NOVELAS</option>
+<option value="ANIME">🎌 ANIME</option>
+<option value="TERROR">💀 TERROR / SUSPENSO</option>
+<option value="RELIGION">🙏 RELIGIÓN</option>
+<option value="CULTURA">🏛️ CULTURA / INVESTIGACIÓN</option>
+<option value="COMEDIA">😂 COMEDIA / HUMOR</option>
+<option value="ADULTOS">🔞 ADULTOS (18+)</option>
+<option value="24/7">⏰ CANALES 24/7</option>
+
+<option value="ARGENTINA">🇦🇷 ARGENTINA</option>
+<option value="BOLIVIA">🇧🇴 BOLIVIA</option>
+<option value="BRASIL">🇧🇷 BRASIL</option>
+<option value="CHILE">🇨🇱 CHILE</option>
+<option value="COLOMBIA">🇨🇴 COLOMBIA</option>
+<option value="COSTA RICA">🇨🇷 COSTA RICA</option>
+<option value="CUBA">🇨🇺 CUBA</option>
+<option value="ECUADOR">🇪🇨 ECUADOR</option>
+<option value="EL SALVADOR">🇸🇻 EL SALVADOR</option>
+<option value="GUATEMALA">🇬🇹 GUATEMALA</option>
+<option value="HONDURAS">🇭🇳 HONDURAS</option>
+<option value="MEXICO">🇲🇽 MÉXICO</option>
+<option value="NICARAGUA">🇳🇮 NICARAGUA</option>
+<option value="PANAMA">🇵🇦 PANAMÁ</option>
+<option value="PARAGUAY">🇵🇾 PARAGUAY</option>
+<option value="PERU">🇵🇪 PERÚ</option>
+<option value="PUERTO RICO">🇵🇷 PUERTO RICO</option>
+<option value="REP. DOMINICANA">🇩🇴 REP. DOMINICANA</option>
+<option value="URUGUAY">🇺🇾 URUGUAY</option>
+<option value="VENEZUELA">🇻🇪 VENEZUELA</option>
+
+<option value="ESPAÑA">🇪🇸 ESPAÑA</option>
+<option value="EE.UU LATINO">🇺🇸 EE.UU LATINO</option>
+<option value="EE.UU ENGLISH">🇺🇸 EE.UU ENGLISH</option>
+<option value="CANADA">🇨🇦 CANADÁ</option>
+<option value="REINO UNIDO">🇬🇧 REINO UNIDO (UK)</option>
+<option value="PORTUGAL">🇵🇹 PORTUGAL</option>
+<option value="ITALIA">🇮🇹 ITALIA</option>
+<option value="FRANCIA">🇫🇷 FRANCIA</option>
+<option value="ALEMANIA">🇩🇪 ALEMANIA</option>
+
+<option value="PLUTO TV">🔵 PLUTO TV GLOBAL</option>
+<option value="PLUTO TV AR">🔵 PLUTO TV ARGENTINA</option>
+<option value="PLUTO TV MX">🔵 PLUTO TV MÉXICO</option>
+<option value="PLUTO TV COL">🔵 PLUTO TV COLOMBIA</option>
+<option value="VIX">🔴 VIX CANALES</option>
+<option value="SAMSUNG TV">📱 SAMSUNG TV PLUS</option>
+<option value="PLEX">⚪ PLEX TV</option>
+<option value="STINGRAY">🎼 STINGRAY MUSIC</option>
+
+<option value="FHD">4K / FULL HD</option>
+<option value="HD">HD (720P)</option>
+<option value="SD">SD (BAJO CONSUMO)</option>
         </select>
     </div>
     <div class="form-group"><label>URL del Logo</label><input type="text" id="mLogo"></div>
@@ -152,3 +212,4 @@
 </script>
 </body>
 </html>
+
